--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,7 @@
     <title>Speakeasy Travel</title>
 </head>
     <body>
+        <header>Speakeasy Travel</header>
         <nav>
             <h1 style="color:darkslateblue">Welcome to Speakeasy Travel!</h1>
             <ul>
@@ -21,5 +22,8 @@
                 </li>
             </ul>
         </nav>
+        <footer>
+            <a href="">Contact</a>
+        </footer>
     </body>
 </html>
