--- a/views/user.ejs
+++ b/views/user.ejs
@@ -14,6 +14,9 @@
         <li>
             <a href="/trips">Trips</a>
         </li>
+        <form action="/users/<%= user._id %>?_method=DELETE" method="POST">
+            <input type="submit" value="Delete" />
+          </form>
         
       </ul>
 </body>
