--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -7,5 +7,19 @@
 </head>
 <body>
     <h1>Welcome to the register Page!</h1>
+
+    <form action="/register" method="post">
+        <p>
+            <input type="text" name="username" placeholder="username" required>
+        </p>
+        <p>
+            <input type="email" name="email" placeholder="email@host.com" required>
+        </p>
+        <p>
+            <input type="password" name="password" placeholder="password" required minlength="8">
+        </p>
+            <input type="submit" value="Submit">
+        </p>
+    </form>
 </body>
 </html>  
