added pictures route

--- a/views/pictures/delete.ejs
+++ b/views/pictures/delete.ejs
@@ -6,6 +6,13 @@
     <title>delete pics</title>
 </head>
 <body>
+    <h1>Picture delete</h1>
+    <a href="/pictures">Pics</a>
+    <ul>
+        <li>
+            <input type="submit" value="Delete">
+        </li>
+    </ul>
     
 </body>
 </html>
