--- a/views/pictures/new.ejs
+++ b/views/pictures/new.ejs
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>new page</title>
+    <title>picture new page</title>
 </head>
 <body>
-    
+        <h1>Pictures!</h1>
+        <ul>
+            <li>
+                <a href="/pictures">Pics</a>
+            </li>
+        </ul>
+
+    <main>
+        <form action="/pictures" method="POST">
+            <input type="text" name="name" placeholder="Pic info"/>
+            <input type="submit" value="Create">
+            <input type="submit" value="Delete">
+        
+        </form>
+    </main>    
 </body>
 </html>
