debugged login and register routes

--- a/views/traveler/new.ejs
+++ b/views/traveler/new.ejs
@@ -8,7 +8,7 @@
 <body>
     <h1>Welcome Traveler to the new traveler page!</h1>
 
-    <form action="/new" method="post">
+    <form action="/traveler" method="POST">
         <p>
             <input type="text" name="name" placeholder="your name" required>
         </p>
