--- a/views/traveler/index.ejs
+++ b/views/traveler/index.ejs
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>you are on the index page</h1>
+        <p><%= traveler[0].name %> </p>
+        <p><%= traveler[0].bio %> </p>
 </body>
 </html>
