--- a/views/traveler/index.ejs
+++ b/views/traveler/index.ejs
@@ -9,5 +9,7 @@
     <h1>you are on the index page</h1>
         <p><%= traveler[0].name %> </p>
         <p><%= traveler[0].bio %> </p>
+
+        <a href="/traveler/<%= traveler[0]._id %>/edit ">Edit</a>
 </body>
 </html>
