--- a/views/trips/show.ejs
+++ b/views/trips/show.ejs
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to trips</h1>
+    <h1>trips show</h1>
     <ul>
         <ul>
             <li><%= user.name %></li>
