edit and update routes are now working for traveler

--- a/views/traveler/edit.ejs
+++ b/views/traveler/edit.ejs
@@ -8,7 +8,7 @@
 <body>
     <h1>You are on the traveler edit page</h1>
 
-    <form action="/traveler?_method=PUT" method="POST">
+    <form action="/traveler/<%= traveler._id %>?_method=PUT" method="POST">
         <input type="text" name="name" value = "<%= traveler.name %> ">
         <input type="text" name="bio" value="<%= traveler.bio %> ">
         <input type="submit" value="Update">
