--- a/views/trips/new.ejs
+++ b/views/trips/new.ejs
@@ -7,5 +7,23 @@
 </head>
 <body>
     <h1>trips new</h1>
+        <ul>
+            <li>
+                <a href="/traveler">Traveler page</a>
+            </li>
+            <li>
+                <a href="/trips">Trips</a>
+            </li>
+        </ul>
+    <main>
+        <form action="/trips" method="POST">
+        <p>
+            <input type="text" name="name" placeholder="Name" />
+        </p>
+        <p>
+            <textarea type="text" name="body" placeholder="Body"></textarea>
+        </p></form>
+    </main>
+
 </body>
 </html>
