--- a/views/trips/new.ejs
+++ b/views/trips/new.ejs
@@ -12,17 +12,21 @@
                 <a href="/traveler">Traveler page</a>
             </li>
             <li>
-                <a href="/trips">Trips</a>
+                <a href="/trip">Trips</a>
             </li>
         </ul>
     <main>
-        <form action="/trips" method="POST">
-        <p>
-            <input type="text" name="name" placeholder="Name" />
-        </p>
-        <p>
-            <textarea type="text" name="body" placeholder="Body"></textarea>
-        </p></form>
+        <form action="/trip" method="POST">
+            <p>
+                <input type="text" name="name" placeholder="Name" />
+            </p>
+            <p>
+                <textarea type="text" name="body" placeholder="Body"></textarea>
+            </p>
+            <p>
+                <input type="submit" value="Submit">
+            </p>
+        </form>
     </main>
 
 </body>
