--- a/views/trips/show.ejs
+++ b/views/trips/show.ejs
@@ -12,7 +12,7 @@
             <li><%= user.name %></li>
         </ul>
         <li>
-            <a href="/trips">Trips</a>
+            <a href="/trip">Trips</a>
         </li>
         <form action="/users/<%= user._id %>?_method=DELETE" method="POST">
             <input type="submit" value="Delete" />
