refactoring trip controller

--- a/views/traveler/index.ejs
+++ b/views/traveler/index.ejs
@@ -27,6 +27,7 @@
         <form action="/traveler/<%= traveler[0]._id %>?_method=DELETE" method=POST>
             <input type="submit" value="Delete">
         </form>
+        <a href="/trip">View your trips</a>
         
         <% } %> 
 </body>
