--- a/views/trips/index.ejs
+++ b/views/trips/index.ejs
@@ -15,13 +15,18 @@
 
         </li>
     </ul>
-    <main>
+    
         <h2>List of trips</h2>
+        <% if(!trip.length) { %>
+          <p>There are no trips available yet.</p>
+          <% } else {%>
         <ul>
           <% trip.forEach(trip => { %>
-          <li>
-            <a href="/trip/<%= trip._id %>"> <%= trip.name %> </a>
-          </li>
+            <a href="/trip/<%= trip._id %>"> 
+              <li>
+              <%= trip.name %> 
+              </li>
+            </a>
           <% }) %>
         </ul>
         <p>
@@ -29,13 +34,8 @@
         <form action="/trip/<%= trip._id %>?_method=DELETE" method=POST>
             <input type="submit" value="Delete">
         </form>
-        </p>
-  
-        <% if(trip.length === 0) { %>
-        <p>There are no trips available yet.</p>
-        <% } %>
-      </main>
-
+      </p>
+      <% } %> 
    
       
 </body>
