--- a/views/trips/new.ejs
+++ b/views/trips/new.ejs
@@ -18,11 +18,27 @@
     <main>
         <form action="/trip" method="POST">
             <p>
-                <input type="text" name="name" placeholder="Name" />
+                <input type="text" name="name" placeholder="Anyone" />
             </p>
             <p>
-                <textarea type="text" name="body" placeholder="Body"></textarea>
+                <input type="date" name="dateStart" placeholder="July 1, 2020" />
             </p>
+            <p>
+                <input type="date" name="dateEnd" placeholder="July 2, 2020"></input>
+            </p>
+
+            <p>
+                <select name ='createdTrip'>
+                  <option default>Select an Traveler</option>
+        
+                 <% traveler.forEach ( traveler => { %>
+                  <option value="<%= traveler._id %>">
+                    <%= traveler.name %>
+                  </option>
+                 <% }) %>
+                </select>
+                </p>
+
             <p>
                 <input type="submit" value="Submit">
             </p>
