refactored controllers for trips: index, new, and show

--- a/views/trips/show.ejs
+++ b/views/trips/show.ejs
@@ -9,7 +9,9 @@
     <h1>trips show</h1>
     <ul>
         <ul>
-            <li><%= user.name %></li>
+            <li><%= trip.name %></li>
+            <li><%= trip.dateStart %></li>
+            <li><%= trip.dateEnd %></li>
         </ul>
         <li>
             <a href="/trip">Trips</a>
