--- a/views/trips/show.ejs
+++ b/views/trips/show.ejs
@@ -15,8 +15,9 @@
         </ul>
         <li>
             <a href="/trip">Trips</a>
+            <a href="/trip/<%= trip._id %>/edit ">Edit Trip</a>
         </li>
-        <form action="/users/<%= user._id %>?_method=DELETE" method="POST">
+        <form action="/trip/<%= trip._id %>?_method=DELETE" method="POST">
             <input type="submit" value="Delete" />
           </form>
         
