refactored trips controllers and templates.  all work except findByIdAndUpdate for the edit route

--- a/views/trips/new.ejs
+++ b/views/trips/new.ejs
@@ -18,7 +18,7 @@
     <main>
         <form action="/trip" method="POST">
             <p>
-                <input type="text" name="name" placeholder="Anyone" />
+                <input type="text" name="name" placeholder="Place" />
             </p>
             <p>
                 <input type="date" name="dateStart" placeholder="July 1, 2020" />
