--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,25 +7,82 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
     <body>
-        <header>Speakeasy Travel</header>
-        <nav>
-            <h1 style="color:darkslateblue">Welcome to Speakeasy Travel!</h1>
-            <ul>
-              
-                
-                </form>
-           
-                <li>
-                    <a href="/register">Create new account</a>
-                </li>
-                <li>
-                    <a href="/login">Login</a>
-                </li>
-            </ul>
-        </nav>
-        <footer>
-            <a href="">Contact</a>
-        </footer>
+        <div class="badge bg-primary text-wrap" style="width: 16rem" height=" 16rem">
+            Speakeasy, Traveler.
+          </div>      
+            <!-- Intro settings -->
+  <style>
+    /* Default height for small devices */
+    #intro-example {
+      height: 400px;
+    }
+
+    /* Height for devices larger than 992px */
+    @media (min-width: 992px) {
+      #intro-example {
+        height: 600px;
+      }
+    }
+  </style>
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <div class="container-fluid">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-mdb-toggle="collapse"
+        data-mdb-target="#navbarExample01"
+        aria-controls="navbarExample01"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarExample01">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item active">
+            <a class="nav-link" aria-current="page" href="#">Home</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#">About</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- Navbar -->
+
+  <!-- Background image -->
+  <div
+    id="intro-example"
+    class="p-5 text-center bg-image"
+    style="background-image: url('https://i.imgur.com/erH7ukL.jpg');
+    background-size: cover;
+    "
+  >
+    <div class="mask" style="background-color: rgba(0, 0, 0, 0.7)">
+      <div class="d-flex justify-content-center align-items-center h-100">
+        <div class="text-white">
+          <h1 class="mb-3">Speakeasy Travel</h1>
+          <h5 class="mb-4">Explore more. Travel less.</h5>
+          <a
+            class="btn btn-outline-light btn-lg m-2"
+            href="/login"
+            role="button"
+            >:Login</a
+          >
+          <a
+            class="btn btn-outline-light btn-lg m-2"
+            href="/register"
+            role="button"
+            >Start exploring</a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Background image -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     </body>
