--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,9 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
     <body>
-        <div class="badge bg-primary text-wrap" style="width: 16rem" height=" 16rem">
-            Speakeasy, Traveler.
-          </div>      
             <!-- Intro settings -->
   <style>
     /* Default height for small devices */
@@ -78,10 +75,14 @@
             role="button"
             >Start exploring</a
           >
+          <p>Welcome to Speakeasy travel. Share your experiences. Share your sights. Share your travels. Let us do the work for you.</p>
         </div>
       </div>
     </div>
+    
   </div>
+
+ 
   <!-- Background image -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
