--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -3,40 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
     <title>Login</title>
 </head>
 <body>
     <style>
         /* Default height for small devices */
-        #intro-example {
+        #media-size {
           height: 400px;
         }
     
         /* Height for devices larger than 992px */
         @media (min-width: 992px) {
-          #intro-example {
+          #media-size {
             height: 600px;
           }
         }
       </style>
-    
-    <div class="background-login"
-    style="background-image: url('https://i.imgur.com/PbCMWlc.jpg');
-    background-size: cover;
-    "
-    >
+    <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <div class="container-fluid">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-mdb-toggle="collapse"
+        data-mdb-target="#navbarExample01"
+        aria-controls="navbarExample01"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarExample01">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item active">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#">About</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <h1>Login and start exploring</h1>
+  </nav>
+  <!-- Navbar -->
 
-    <form action="/login" method="post">
-        <p>
-            <input type="email" name="email" placeholder="email@host.com" required>
-        </p>
-        <p>
-            <input type="password" name="password" placeholder="password" required minlength="8">
-        </p>
-            <input type="submit" value="Login">
-        </p>
-    </form>
+  <!-- Background image -->
+    <div id="media-size" class="p-5 text-center bg-image"
+    style="background-image: url('https://i.imgur.com/PbCMWlc.jpg')"
+    >
+    <div class="mask" style="background-color: rgba(0,0,0,0.7)">
+      <div class="d-flex justify-content-center align-items-center h-100">
+        <div class="text-white">
+        <h1 class="mb-3">Login and start exploring</h1>
+            <form action="/login" method="post">
+              <div class="mb-3 row">
+                <label for="email" class="col-sm-2 col-form-label">Email</label>
+                <div class="col-sm-10">
+                  <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com">
+                </div>
+              </div>
+              <div class="mb-3 row">
+                <label for="password" class="col-sm-2 col-form-label">Password</label>
+                <div class="col-sm-10">
+                  <input type="password" class="form-control" name="password" id="password" placeholder="password" required minlength="8">
+                </div>
+              </div>
+             <button type="submit" class="btn btn-outline-light btn-lg mb-3">Login</button>
+          </form>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
 </html>
