--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -53,7 +53,7 @@
 
   <!-- Background image -->
     <div id="media-size" class="p-5 text-center bg-image"
-    style="background-image: url('https://i.imgur.com/PbCMWlc.jpg')"
+    style="background: url('https://cdn.pixabay.com/photo/2015/10/30/20/13/sunrise-1014711_960_720.jpg') no-repeat center center; background-size: cover"
     >
     <div class="mask" style="background-color: rgba(0,0,0,0.7)">
       <div class="d-flex justify-content-center align-items-center h-100">
