--- a/views/traveler/index.ejs
+++ b/views/traveler/index.ejs
@@ -7,23 +7,34 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
-    <form action="/logout?_method=DELETE" method="POST">
-        <input type="submit" value="logout">
-    </form>
-    <h1>you are on the index page</h1>
+    <div
+    id="intro-example"
+    class="p-5 text-center bg-image"
+    style="background-image: url('https://cdn.pixabay.com/photo/2016/10/18/21/22/california-1751455_1280.jpg');
+    background-size: cover;
+    "
+    >
+        <div
+        <form action="/logout?_method=DELETE" method="POST">
+            <input type="submit" value="logout">
+        </form>
+        <h1>traveler index</h1>
+        <img src="https://i.imgur.com/wpF8Ywt.jpg" class="img-fluid" alt="Responsive image" style="max-width: 25%; margin-left: 5px;">
         
-        <% if (!traveler.length) { %>
-            <a href="/traveler/new">Enter New User Information</a>
-        <% } else {%>
-    
-        <p>Name: <%= traveler[0].name %> </p>
-        <p>Bio: <%= traveler[0].bio %> </p>
-        <p>Street Address: <%= traveler[0].address.street %> </p>
-        <p>City: <%= traveler[0].address.city %> </p>
-        <p>State: <%= traveler[0].address.state %> </p>
-        <p>Country: <%= traveler[0].address.country %> </p>
+        </div>
+            <div style="margin-right: 30%;">
+            <% if (!traveler.length) { %>
+                <a href="/traveler/new">Enter New User Information</a>
+            <% } else {%>
+        
+            <p>Name: <%= traveler[0].name %> </p>
+            <p>Bio: <%= traveler[0].bio %> </p>
+            <p>Street Address: <%= traveler[0].address.street %> </p>
+            <p>City: <%= traveler[0].address.city %> </p>
+            <p>State: <%= traveler[0].address.state %> </p>
+            <p>Country: <%= traveler[0].address.country %> </p>
 
-
+            </div>
         <a href="/traveler/<%= traveler[0]._id %>/edit ">Edit</a>
         <form action="/traveler/<%= traveler[0]._id %>?_method=DELETE" method=POST>
             <input type="submit" value="Delete">
