--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,20 +11,20 @@
   <style>
     /* Default height for small devices */
     #intro-example {
-      height: 400px;
+      height: 600px;
     }
 
     /* Height for devices larger than 992px */
     @media (min-width: 992px) {
       #intro-example {
-        height: 600px;
+        height: 680px;
       }
     }
   </style>
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white">
-    <div class="container-fluid">
+    <div class="container-fluid"; margin-top="10px">
       <button
         class="navbar-toggler"
         type="button"
@@ -37,14 +37,17 @@
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarExample01">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item active">
             <a class="nav-link" aria-current="page" href="/">Home</a>
           </li>
+          
           <li>
             <a class="nav-link" href="#">About</a>
           </li>
+          
         </ul>
+        
       </div>
     </div>
   </nav>
@@ -81,9 +84,7 @@
     </div>
     
   </div>
-
- 
-  <!-- Background image -->
+  
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     </body>
