--- a/views/traveler/index.ejs
+++ b/views/traveler/index.ejs
@@ -7,6 +7,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
+  <style>
+    /* Default height for small devices */
+    #intro-example {
+      height: 600px;
+    }
+
+    /* Height for devices larger than 992px */
+    @media (min-width: 992px) {
+      #intro-example {
+        height: 680px;
+      }
+    }
+  </style>
+  <div
+  id="intro-example"
+  class="p-5 text-left bg-image"
+  style="background-image: url('https://cdn.pixabay.com/photo/2017/10/23/05/56/holiday-2880261_1280.jpg');
+  background-size: cover;
+  
+  "
+>
      <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <div class="container-fluid">
@@ -43,27 +64,31 @@
     
    
     <h1>Welcome</h1>
-        
-        <% if (!traveler.length) { %>
-           <p> <a href="/traveler/new">Enter</a> some information so that we know more about you. </p>
-        <% } else {%>
     
-        <p>Name: <%= traveler[0].name %> </p>
-        <p>Bio: <%= traveler[0].bio %> </p>
-        <p>Street Address: <%= traveler[0].address.street %> </p>
-        <p>City: <%= traveler[0].address.city %> </p>
-        <p>State: <%= traveler[0].address.state %> </p>
-        <p>Country: <%= traveler[0].address.country %> </p>
+        <div style="margin-left: 5px";   
+          <% if (!traveler.length) { %>
+            <p> <a href="/traveler/new">Enter</a> some information so that we know more about you. </p>
+          <% } else {%>
+      
+          <p>Name: <%= traveler[0].name %> </p>
+          <p>Bio: <%= traveler[0].bio %> </p>
+          <p>Street Address: <%= traveler[0].address.street %> </p>
+          <p>City: <%= traveler[0].address.city %> </p>
+          <p>State: <%= traveler[0].address.state %> </p>
+          <p>Country: <%= traveler[0].address.country %> </p>
+        </div>
+        <div class="clearfix">
+          <img src="..." class="col-md-6 float-md-end mb-3 ms-md-3" alt="...">
+        </div>
 
-
-            </div>
-        <a href="/traveler/<%= traveler[0]._id %>/edit ">Edit</a>
+        <a href="/traveler/<%= traveler[0]._id %>/edit "; style="margin-left: 5px;">Edit</a>
         <form action="/traveler/<%= traveler[0]._id %>?_method=DELETE" method=POST>
             <input type="submit" value="Delete">
         </form>
         <a href="/trip">View your trips</a>
         
         <% } %> 
+
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
