--- a/views/trips/edit.ejs
+++ b/views/trips/edit.ejs
@@ -8,19 +8,19 @@
 </head>
 <body>
     <h1>trips edit page</h1>
-
-    <form action="/trip/<%= trip._id %>?_method=PUT" method="POST">
-      <input type="text" name="name" value = "<%= trip.name %> ">
-      <input type="text" name="dateStart" value= "<%= trip.dateStart %> ">
-      <input type="text" name="dateEnd" value = "<%= trip.dateEnd %> ">
-      <input type="text" name="activities" value= "<%= trip.activities %> ">
-      <input type="text" name="notes" value = "<%= trip.notes %> ">
-      <input type="text" name="location" value= "<%= trip.location %> ">
-      <input type="text" name="budget" value = "<%= trip.budget %> ">
-      <input type="text" name="img" value= "<%= trip.img %> ">
-      
-      <input type="submit" value="Update">
-  </form>
+    <div>
+      <form action="/trip/<%= trip._id %>?_method=PUT" method="POST">
+        <input type="text" name="name" value = "<%= trip.name %> ">
+        <input type="text" name="dateStart" value= "<%= trip.dateStart %> ">
+        <input type="text" name="dateEnd" value = "<%= trip.dateEnd %> ">
+        <input type="text" name="activities" value= "<%= trip.activities %> ">
+        <input type="text" name="notes" value = "<%= trip.notes %> ">
+        <input type="text" name="location" value= "<%= trip.location %> ">
+        <input type="text" name="budget" value = "<%= trip.budget %> ">
+        <input type="text" name="img" value= "<%= trip.img %> ">
+      </div>    
+        <input type="submit" value="Update">
+    </form>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
