--- a/views/trips/index.ejs
+++ b/views/trips/index.ejs
@@ -7,7 +7,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
+  <style>
+    /* Default height for small devices */
+    #intro-example {
+      height: 600px;
+    }
+
+    /* Height for devices larger than 992px */
+    @media (min-width: 992px) {
+      #intro-example {
+        height: 680px;
+      }
+    }
+  </style>
+  <div
+  id="intro-example"
+  class="p-5 text-left bg-image"
+  style="background-image: url('https://cdn.pixabay.com/photo/2014/08/15/11/29/beach-418742_1280.jpg');
+  background-size: cover;
   
+  "
+>
     <h1>trips index</h1>
 
     <ul>
