--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -13,13 +13,13 @@
     <style>
         /* Default height for small devices */
         #media-size {
-          height: 400px;
+          height: 600px;
         }
     
         /* Height for devices larger than 992px */
         @media (min-width: 992px) {
           #media-size {
-            height: 600px;
+            height: 679px;
           }
         }
       </style>
@@ -81,8 +81,9 @@
     </div>
   </div>
 
-    <!-- Bootstrap -->
+    <!-- Bootstrap
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+-->
 </body>
 </html>
