--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
     <style>
@@ -18,15 +20,68 @@
             height: 679px;
           }
         }
-      </style>
+    </style>
+    <style>
+      /* Default height for small devices */
+      #intro-example {
+        height: 600px;
+      }
+  
+      /* Height for devices larger than 992px */
+      @media (min-width: 992px) {
+        #intro-example {
+          height: 679px;
+        }
+      }
+    </style>
+  
+<nav class="navbar navbar-expand-lg navbar-light bg-white">
+  <div class="container-fluid">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-mdb-toggle="collapse"
+      data-mdb-target="#navbarExample01"
+      aria-controls="navbarExample01"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <i class="fas fa-bars"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarExample01">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link" aria-current="page" href="/">Home</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li>
+          <a class="nav-link" href="/traveler">Traveler</a>
+        </li>
+        <li>
+          <a class="nav-link" href="/trips">Trips</a>
+        </li>
+        <li>
+          <form action="/logout?_method=DELETE" method="POST">
+              <input type="submit" value="logout" style="margin-left: 1100px; margin-top: 4px; ">
+          </li>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<div
+  id="intro-example"
+  class="p-5 text-left bg-image"
+  style="background-image: url('https://cdn.pixabay.com/photo/2016/01/09/18/27/old-1130731_1280.jpg');
+  background-size: cover;
+  
+  "
+>
     
-    <div
-    id="intro-example"
-    class="p-5 text-center bg-image"
-    style="background-image: url('https://cdn.pixabay.com/photo/2016/01/09/18/27/old-1130731_1280.jpg');
-    background-size: cover;
-    "
-  >
+    
+      <div> 
         <h1>Welcome to the register Page!</h1>
 
         <form action="/register" method="post">
@@ -42,6 +97,8 @@
                 <input type="submit" value="Submit">
             </p>
         </form>
-    </div>
+      </div>  
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
 </html>  
