--- a/views/trips/new.ejs
+++ b/views/trips/new.ejs
@@ -20,40 +20,69 @@
           }
         }
       </style>
-      <div
-      id="intro-example"
-      class="p-5 text-left bg-image"
-      style="background-image: url('https://cdn.pixabay.com/photo/2016/02/19/11/36/canal-1209808_1280.jpg');
-      background-size: cover;
-      
-      "
-    >
-    <h1>trips new</h1>
-        <ul>
-            <li>
-                <a href="/traveler">Traveler page</a>
+    
+  <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <div class="container-fluid">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-mdb-toggle="collapse"
+        data-mdb-target="#navbarExample01"
+        aria-controls="navbarExample01"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarExample01">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item active">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li>
+            <a class="nav-link" href="/traveler">Traveler</a>
+          </li>
+          <li>
+            <a class="nav-link" href="/trips">Trips</a>
+          </li>
+          <li>
+            <form action="/logout?_method=DELETE" method="POST">
+                <input type="submit" value="logout" style="margin-left: 1100px; margin-top: 4px; ">
             </li>
-            <li>
-                <a href="/trip">Trips</a>
-            </li>
+          </li>
         </ul>
-    <main>
-        <form action="/trip" method="POST">
-            <p>
-                <input type="text" name="name" placeholder="Place" />
-            </p>
-            <p>
-                <input type="date" name="dateStart" placeholder="July 1, 2020" />
-            </p>
-            <p>
-                <input type="date" name="dateEnd" placeholder="July 2, 2020"></input>
-            </p>
-            <p>
-                <input type="submit" value="Submit">
-            </p>
-        </form>
-    </main>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+      </div>
+    </div>
+  </nav>
+  <div
+    id="intro-example"
+    class="p-5 text-left bg-image"
+    style="background-image: url('https://cdn.pixabay.com/photo/2016/02/19/11/36/canal-1209808_1280.jpg');
+    background-size: cover;
+    
+    "
+  >
+        <h1>trips new</h1>
+            <form action="/trip" method="POST">
+                <p>
+                    <input type="text" name="name" placeholder="Place" />
+                </p>
+                <p>
+                    <input type="date" name="dateStart" placeholder="July 1, 2020" />
+                </p>
+                <p>
+                    <input type="date" name="dateEnd" placeholder="July 2, 2020"></input>
+                </p>
+                <p>
+                    <input type="submit" value="Submit">
+                </p>
+            </form>
+
+    
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
 </html>
