--- a/views/traveler/index.ejs
+++ b/views/traveler/index.ejs
@@ -44,8 +44,11 @@
             <a class="nav-link" href="#">About</a>
           </li>
           <li>
+            <a class="nav-link" href="/trips">Trips</a>
+          </li>
+          <li>
             <form action="/logout?_method=DELETE" method="POST">
-                <input type="submit" value="logout">
+                <input type="submit" value="logout" style="margin-left: 1150px; margin-top: 4px;">
             </form>
           </li>
         </ul>
@@ -66,17 +69,17 @@
    
     <h1>Welcome</h1>
     
-        <div style="margin-left: 5px";   
+        <div style="margin-left: 5px; color: white; background-color: rgba(0,0,0,0.7); max-width: fit-content;";   
           <% if (!traveler.length) { %>
             <p> <a href="/traveler/new">Enter</a> some information so that we know more about you. </p>
           <% } else {%>
       
           <p>Name: <%= traveler[0].name %> </p>
           <p>Bio: <%= traveler[0].bio %> </p>
-          <p>Street Address: <%= traveler[0].address.street %> </p>
           <p>City: <%= traveler[0].address.city %> </p>
           <p>State: <%= traveler[0].address.state %> </p>
           <p>Country: <%= traveler[0].address.country %> </p>
+          
         </div>
         <div class="clearfix">
           <img src="..." class="col-md-6 float-md-end mb-3 ms-md-3" alt="...">
@@ -84,10 +87,8 @@
 
         <a href="/traveler/<%= traveler[0]._id %>/edit "; style="margin-left: 5px;">Edit</a>
         <form action="/traveler/<%= traveler[0]._id %>?_method=DELETE" method=POST>
-            <input type="submit" value="Delete">
-        </form>
-        <a href="/trip">View your trips</a>
-        
+            <input type="submit" value="Delete Account">
+        </form>  
         <% } %> 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
