--- a/views/trips/show.ejs
+++ b/views/trips/show.ejs
@@ -7,6 +7,60 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
+    <style>
+        /* Default height for small devices */
+        #intro-example {
+          height: 600px;
+        }
+    
+        /* Height for devices larger than 992px */
+        @media (min-width: 992px) {
+          #intro-example {
+            height: 679px;
+          }
+        }
+      </style>
+      <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <div class="container-fluid">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-mdb-toggle="collapse"
+            data-mdb-target="#navbarExample01"
+            aria-controls="navbarExample01"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarExample01">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item active">
+                <a class="nav-link" aria-current="page" href="/">Home</a>
+              </li>
+              <li>
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li>
+                <a class="nav-link" href="/traveler">Traveler</a>
+              </li>
+              <li>
+                <form action="/logout?_method=DELETE" method="POST">
+                    <input type="submit" value="logout" style="margin-left: 1150px; margin-top: 4px;">
+                </form>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div
+  id="intro-example"
+  class="p-5 text-left bg-image"
+  style="background-image: url('https://cdn.pixabay.com/photo/2017/06/05/11/01/airport-2373727_1280.jpg');
+  background-size: cover;
+  
+  "
+>
     <h1>trips show</h1>
     <ul>
         <ul>
