worked on bugs and traveler edit

--- a/views/traveler/index.ejs
+++ b/views/traveler/index.ejs
@@ -38,35 +38,28 @@
       <div class="collapse navbar-collapse" id="navbarExample01">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <a class="nav-link" aria-current="page" href="/">SpeakeasyTravel</a>
           </li>
           <li>
             <a class="nav-link" href="#">About</a>
           </li>
           <li>
-            <a class="nav-link" href="/trips">Trips</a>
-          </li>
-          <li>
-            <form action="/logout?_method=DELETE" method="POST">
-                <input type="submit" value="logout" style="margin-left: 1150px; margin-top: 4px;">
-            </form>
+            <a class="nav-link" href="/trip">Trips</a>
           </li>
         </ul>
+        <form class="form-inline my-2 my-lg-0" action="/logout?_method=DELETE" method="POST">
+          <input type="submit" value="logout" >
       </div>
     </div>
   </nav>
   <!-- Navbar -->
+
   <div
   id="intro-example"
   class="p-5 text-left bg-image"
   style="background-image: url('https://cdn.pixabay.com/photo/2017/10/23/05/56/holiday-2880261_1280.jpg');
-  background-size: cover;
-  
-  "
+  background-size: cover; "
 >
-    
-    
-   
     <h1>Welcome</h1>
     
         <div style="margin-left: 5px; color: white; padding: 5px; background-color: rgba(0,0,0,0.7); max-width: fit-content;";   
