--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -40,7 +40,7 @@
       <div class="collapse navbar-collapse" id="navbarExample01">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <a class="nav-link" aria-current="page" href="/">SpeakeasyTravel</a>
           </li>
           <li>
             <a class="nav-link" href="#">About</a>
