--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -51,21 +51,11 @@
     <div class="collapse navbar-collapse" id="navbarExample01">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item active">
-          <a class="nav-link" aria-current="page" href="/">Home</a>
+          <a class="nav-link" aria-current="page" href="/">SpeakeasyTravel</a>
         </li>
         <li>
           <a class="nav-link" href="#">About</a>
-        </li>
-        <li>
-          <a class="nav-link" href="/traveler">Traveler</a>
-        </li>
-        <li>
-          <a class="nav-link" href="/trips">Trips</a>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0" action="/logout?_method=DELETE" method="POST">
-        <input type="submit" value="logout" >
-      
+        </li>      
     </div>
   </div>
 </nav>
@@ -73,31 +63,32 @@
 <!-- Background image -->
 <div
   id="intro-example"
-  class="p-5 text-left bg-image"
+  class="p-5 text-center bg-image"
   style="background-image: url('https://cdn.pixabay.com/photo/2016/01/09/18/27/old-1130731_1280.jpg');
   background-size: cover;"
 >
 <div class="mask" style="background-color: rgba(0,0,0,0.7)">
   <div class="d-flex justify-content-center align-items-center h-100">
     <div class="text-white">
-    <h1 class="mb-3">Welcome to the register Page!</h1> 
+    <h1 class="mb-3">Welcome to the registration Page!</h1> 
+    <p class="mb-3" >Enter the information below to start your journey.</p>
         <form action="/register" method="post">
             <div class="mb-3 row">
               <label for="username" class="col-sm-2">Username</label>
               <div class="col-sm-10">
-               <input type="text" class="form-control" name="username" placeholder="username" required>
+               <input type="text" class="form-control" id="username" name="username" placeholder="username" required>
               </div>
             </div>
             <div class="mb-3 row">
               <label for="email" class="col-sm-2">Email</label>
               <div class="col-sm-10">
-                <input type="email" class="form-control" name="email" placeholder="email@host.com" required>
+                <input type="email" class="form-control" id="email" name="email" placeholder="email@host.com" required>
               </div>
             </div>
             <div class="mb-3 row">
               <label for="password" class="col-sm-2">Password</label>
               <div class="col-sm-10">
-                <input type="password" class="form-control" name="password" placeholder="password" required minlength="8">
+                <input type="password" class="form-control" id="password" name="password" placeholder="password" required minlength="8">
               </div>
             </div>
             <button type="submit" class="btn btn-outline-light btn-lg mb-3">Submit</button>
