--- a/views/home.ejs
+++ b/views/home.ejs
@@ -38,10 +38,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarExample01">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
-          <li class="nav-item active">
+          <!-- <li class="nav-item active">
             <a class="nav-link" aria-current="page" href="/">Home</a>
           </li>
-          
+           -->
           <li>
             <a class="nav-link" href="#">About</a>
           </li>
