edits to traveler edit and index page for style

--- a/views/traveler/index.ejs
+++ b/views/traveler/index.ejs
@@ -49,6 +49,7 @@
         </ul>
         <form class="form-inline my-2 my-lg-0" action="/logout?_method=DELETE" method="POST">
           <input type="submit" value="logout" >
+        </form>
       </div>
     </div>
   </nav>
