styled new traveler form

--- a/views/traveler/edit.ejs
+++ b/views/traveler/edit.ejs
@@ -54,8 +54,8 @@
       </div>
     </div>
   </nav>
-  <div
-    
+
+    <!-- background img -->
     <div
     id="intro-example"
     class="p-5 text-center bg-image"
