--- a/views/traveler/new.ejs
+++ b/views/traveler/new.ejs
@@ -7,30 +7,108 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Welcome Traveler to the new traveler page!</h1>
+    <style>
+        /* Default height for small devices */
+        #intro-example {
+          height: 600px;
+        }
+    
+        /* Height for devices larger than 992px */
+        @media (min-width: 992px) {
+          #intro-example {
+            height: 679px;
+          }
+        }
+      </style>
+   
+    <!-- nav bar -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <div class="container-fluid">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-mdb-toggle="collapse"
+        data-mdb-target="#navbarExample01"
+        aria-controls="navbarExample01"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarExample01">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item active">
+            <a class="nav-link" aria-current="page" href="/">SpeakeasyTravel</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li>
+            <a class="nav-link" href="/traveler">Traveler</a>
+          </li>
+          <li>
+            <a class="nav-link" href="/trip">Trips</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0" action="/logout?_method=DELETE" method="POST">
+          <input type="submit" value="logout" >
+         </form> 
+      </div>
+    </div>
+  </nav>
 
-    <form action="/traveler" method="POST">
-        <p>
-            <input type="text" name="name" placeholder="your name" required>
-        </p>
-        <p>
-            <input type="text" name="bio" placeholder="tell us about you">
-        </p>
-        <p>
-            <input type="text" name="address.street" placeholder="666 Elm St.">
-        </p>
-        <p>
-            <input type="text" name="address.city" placeholder="Los Angeles">
-        </p>
-        <p>
-            <input type="text" name="address.state" placeholder="CA">
-        </p>
-        <p>
-            <input type="text" name="address.country" placeholder="USA">
-        </p>
-            <input type="submit" value="Submit">
-        </p>
-    </form>
+  <!-- background image -->
+    <div
+        id="intro-example"
+        class="p-5 text-center bg-image"
+        style="background-image: url('https://cdn.pixabay.com/photo/2020/05/16/01/08/beach-5175610_960_720.jpg');
+        background-size: cover;
+        "
+    >
+  <div class="mask" style="background-color: rgba(0,0,0,0.7)">
+    <div class="d-flex justify-content-center align-items-center h-100">
+      <div class="text-white">  
+        <h1 class="mb-3">Please share some information with us.</h1>
+        
+        <form action="/traveler" method="POST">
+          
+          <div class="mb-3 row">
+            <label for="name" class="col-sm-2 col-form-label">Name</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" name="name" id="name" placeholder="name" required>
+            </div>
+          </div>
+          <div class="mb-3 row">
+            <label for="bio" class="col-sm-2 col-form-label">Bio</label>
+            <div class="col-sm-10">
+              <textarea class="form-control" name="bio" id="bio" placeholder="bio"></textarea>
+            </div>
+          </div>
+          <div class="mb-3 row">
+            <label for="city" class="col-sm-2 col-form-label">City</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" name="address.city" id="city" placeholder = "city ">
+            </div>
+          </div>  
+          <div class="mb-3 row">
+            <label for="state" class="col-sm-2 col-form-label">State</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" name="address.state" id="state" placeholder = "state ">
+            </div>
+          </div> 
+          <div class="mb-3 row">
+            <label for="country" class="col-sm-2 col-form-label">Country</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" name="address.country" id="country" placeholder = "country ">
+            </div>
+          </div>             
+          <button type="submit" class="btn btn-outline-light btn-lg mb-3">Update</button>
+        </form>
+    </div>
+    </div>
+    </div>
+    
+    <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
