trip/new page all done

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
     /* Height for devices larger than 992px */
     @media (min-width: 992px) {
       #intro-example {
-        height: 679px;
+        height: 992px;
       }
     }
   </style>
@@ -59,6 +59,7 @@
     class="p-5 text-center bg-image"
     style="background-image: url('https://i.imgur.com/erH7ukL.jpg');
     background-size: cover;
+    position: relative;
     "
   >
     <div class="mask" style="background-color: rgba(0, 0, 0, 0.7)">
