--- a/views/trips/edit.ejs
+++ b/views/trips/edit.ejs
@@ -7,21 +7,84 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
+  <style>
+    /* Default height for small devices */
+    #intro-example {
+      height: 600px;
+    }
+
+    /* Height for devices larger than 992px */
+    @media (min-width: 992px) {
+      #intro-example {
+        height: 679px;
+      }
+    }
+  </style>
+  <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <div class="container-fluid">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-mdb-toggle="collapse"
+        data-mdb-target="#navbarExample01"
+        aria-controls="navbarExample01"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarExample01">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item active">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#">About</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0" action="/logout?_method=DELETE" method="POST"></form>
+          <input type="submit" value="logout" >
+      </div>
+      
+    </div>
+  </nav>
+  <div
+  id="intro-example"
+  class="p-5 text-left bg-image"
+  style="background-image: url('https://cdn.pixabay.com/photo/2015/07/11/23/02/plane-841441_960_720.jpg');
+  background-size: cover;
+  
+  "
+>
     <h1>trips edit page</h1>
     <div>
       <form action="/trip/<%= trip._id %>?_method=PUT" method="POST">
-        <input type="text" name="name" value = "<%= trip.name %> ">
-        <input type="text" name="dateStart" value= "<%= trip.dateStart %> ">
-        <input type="text" name="dateEnd" value = "<%= trip.dateEnd %> ">
-        <input type="text" name="activities" value= "<%= trip.activities %> ">
-        <input type="text" name="notes" value = "<%= trip.notes %> ">
-        <input type="text" name="location" value= "<%= trip.location %> ">
-        <input type="text" name="budget" value = "<%= trip.budget %> ">
-      </div>    
-        <input type="submit" value="Update">
+        <p></p>
+          <input type="text" name="name" placeholder="trip name" value = "<%= trip.name %> ">
+        </p>
+        <p>
+          <input type="text" name="dateStart" placeholder="start" value= "<%= trip.dateStart %> ">
+        </p>
+        <p>
+          <input type="text" name="dateEnd" placeholder="end" value = "<%= trip.dateEnd %> ">
+        </p>
+        <p>
+          <input type="text" name="activities" placeholder="activities" value= "<%= trip.activities %> ">
+        </p>
+        <p>
+          <input type="text" name="notes" placeholder="notes" value = "<%= trip.notes %> ">
+        </p>
+        <p>
+          <input type="text" name="location" placeholder="location"value= "<%= trip.location %> ">
+        </p>
+        <p>
+          <input type="text" name="budget" placeholder="budget"value = "<%= trip.budget %> ">
+        </p>
+    </div>    
+      <input type="submit" value="Update">
         <form action='/api/images' method="post" enctype="multipart/form-data">
-          <input type='file' name='image' />
-        </form>
+        <input type='file' name='image' />
+      </form>
     </form>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
