--- a/views/trips/index.ejs
+++ b/views/trips/index.ejs
@@ -42,11 +42,11 @@
             <a class="nav-link" href="#">About</a>
           </li>
           <li>
-            <form action="/logout?_method=DELETE" method="POST">
-                <input type="submit" value="logout" style="margin-left: 1200px; margin-top: 4px;">
-            </form>
+            <a class="nav-link" href="/traveler">Traveler</a>
           </li>
         </ul>
+        <form class="form-inline my-2 my-lg-0" action="/logout?_method=DELETE" method="POST">
+          <input type="submit" value="logout" >
       </div>
     </div>
   </nav>
@@ -55,20 +55,12 @@
   class="p-5 text-left bg-image"
   style="background-image: url('https://cdn.pixabay.com/photo/2014/08/15/11/29/beach-418742_1280.jpg');
   background-size: cover;
-  
+  padding: none;
   "
 >
-    <h1>trips index</h1>
+  <div style="float:left; margin: none; color: white; padding: 5px; background-color: rgba(0,0,0,0.7); max-width: fit-content;">
+    <h1>Here are your trips!</h1>
 
-    <ul>
-        <li>
-                <a href="/traveler">Traveler page</a>
-                <a href="/trip/new">Add trip</a>
-
-        </li>
-    </ul>
-    
-        <h2>List of trips</h2>
         <% if(!trip.length) { %>
           <p>There are no trips available yet.</p>
           <% } else {%>
@@ -82,11 +74,13 @@
           <% }) %>
         </ul>
         <p>
-
+          Don't see any? Add your first trip!
       </p>
+      <p><a class="btn btn-info" href="/trip/new" role="button">Add a new trip</a></p> 
+  </div>
       <% } %> 
-   
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+      
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
 </html>
