--- a/views/trips/new.ejs
+++ b/views/trips/new.ejs
@@ -46,26 +46,26 @@
             <a class="nav-link" href="/traveler">Traveler</a>
           </li>
           <li>
-            <a class="nav-link" href="/trips">Trips</a>
-          </li>
-          <li>
-            <form action="/logout?_method=DELETE" method="POST">
-                <input type="submit" value="logout" style="margin-left: 1100px; margin-top: 4px; ">
-            </li>
+            <a class="nav-link" href="/trip">Trips</a>
           </li>
         </ul>
+        <form class="form-inline my-2 my-lg-0" action="/logout?_method=DELETE" method="POST"></form>
+          <input type="submit" value="logout" >
       </div>
     </div>
   </nav>
   <div
     id="intro-example"
-    class="p-5 text-left bg-image"
+    class="p-0 text-left bg-image"
     style="background-image: url('https://cdn.pixabay.com/photo/2016/02/19/11/36/canal-1209808_1280.jpg');
     background-size: cover;
+    min-height: 93.3vh;
     
     "
   >
-        <h1>trips new</h1>
+       
+        <div style="border-radius: 25%; margin: 5px; color: white; padding: 30px; background-color: rgba(0,0,0,0.7); max-width: fit-content;">
+          <h1>Create a new trip</h1>
             <form action="/trip" method="POST">
                 <p>
                     <input type="text" name="name" placeholder="Place" />
@@ -80,7 +80,7 @@
                     <input type="submit" value="Submit">
                 </p>
             </form>
-
+        </div>
     
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
