--- a/views/trips/show.ejs
+++ b/views/trips/show.ejs
@@ -44,12 +44,9 @@
               <li>
                 <a class="nav-link" href="/traveler">Traveler</a>
               </li>
-              <li>
-                <form action="/logout?_method=DELETE" method="POST">
-                    <input type="submit" value="logout" style="margin-left: 1150px; margin-top: 4px;">
-                </form>
-              </li>
             </ul>
+            <form class="form-inline my-2 my-lg-0" action="/logout?_method=DELETE" method="POST"></form>
+          <input type="submit" value="logout" >
           </div>
         </div>
       </nav>
