fixed edit.ejs after failed pull request

--- a/views/traveler/edit.ejs
+++ b/views/traveler/edit.ejs
@@ -70,7 +70,7 @@
         <h1 class="mb-3">Need to make some changes?</h1>
         <h2 class="mb-3">Update your information below.</h2>
 
-    <form ction="/traveler/<%= traveler._id %>?_method=PUT" method="POST">
+    <form action="/traveler/<%= traveler._id %>?_method=PUT" method="POST">
       <div class="mb-3 row">
         <label for="name" class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
