started restyling in trips

--- a/views/trips/index.ejs
+++ b/views/trips/index.ejs
@@ -52,12 +52,17 @@
   </nav>
   <div
   id="intro-example"
-  class="p-5 text-left bg-image"
+  class="p-0 text-left bg-image"
   style="background-image: url('https://cdn.pixabay.com/photo/2014/08/15/11/29/beach-418742_1280.jpg');
   background-size: cover;
+  min-height: 97.3vh;
   
   "
 >
+<div style="
+ color: white;
+   background-color: rgba(0,0,0,0.7);
+    max-width: fit-content;" 
     <h1>trips index</h1>
 
     <ul>
