--- a/views/trips/edit.ejs
+++ b/views/trips/edit.ejs
@@ -41,6 +41,12 @@
           <li>
             <a class="nav-link" href="#">About</a>
           </li>
+          <li>
+            <a class="nav-link" href="/traveler">Traveler</a>
+          </li>
+          <li>
+            <a class="nav-link" href="/trip">Trips</a>
+          </li>
         </ul>
         <form class="form-inline my-2 my-lg-0" action="/logout?_method=DELETE" method="POST"></form>
           <input type="submit" value="logout" >
@@ -50,13 +56,25 @@
   </nav>
   <div
   id="intro-example"
-  class="p-5 text-left bg-image"
+  class="p-0 text-left bg-image"
   style="background-image: url('https://cdn.pixabay.com/photo/2015/07/11/23/02/plane-841441_960_720.jpg');
   background-size: cover;
+  min-height: 92vh;
+
   
   "
 >
-    <h1>trips edit page</h1>
+<div
+style="
+ color: white;
+   background-color: rgba(0,0,0,0.7);
+    max-width: fit-content;
+    border-radius: 25%;
+    padding: 40px;
+    " 
+>
+    <h1 style="text-align: center;
+    padding-bottom: 10px;">Edit your trip</h1>
     <div>
       <form action="/trip/<%= trip._id %>?_method=PUT" method="POST">
         <p></p>
@@ -80,12 +98,17 @@
         <p>
           <input type="text" name="budget" placeholder="budget"value = "<%= trip.budget %> ">
         </p>
-    </div>    
-      <input type="submit" value="Update">
+    </div>
+    <p>  
+      <input class="btn btn-info" type="submit" value="Update">
+    </p> 
+    <p>
         <form action='/api/images' method="post" enctype="multipart/form-data">
-        <input type='file' name='image' />
+        <input class="btn btn-info" placeholder="Upload" type='file' name='image'>
+    </p> 
       </form>
     </form>
+</div>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
