--- a/views/trips/new.ejs
+++ b/views/trips/new.ejs
@@ -64,7 +64,7 @@
     "
   >
        
-        <div style="border-radius: 25%; margin: 5px; color: white; padding: 30px; background-color: rgba(0,0,0,0.7); max-width: fit-content;">
+        <div style="border-radius: 25%; color: white; padding: 30px; background-color: rgba(0,0,0,0.7); max-width: fit-content;">
           <h1>Create a new trip</h1>
             <form action="/trip" method="POST">
                 <p>
@@ -77,7 +77,7 @@
                     <input type="date" name="dateEnd" placeholder="July 2, 2020"></input>
                 </p>
                 <p>
-                    <input type="submit" value="Submit">
+                    <input href="/trip/edit" class="btn btn-info" type="submit" value="Submit">
                 </p>
             </form>
         </div>
