--- a/views/trips/show.ejs
+++ b/views/trips/show.ejs
@@ -44,6 +44,9 @@
               <li>
                 <a class="nav-link" href="/traveler">Traveler</a>
               </li>
+              <li>
+                <a class="nav-link" href="/trip">Trips</a>
+              </li>
             </ul>
             <form class="form-inline my-2 my-lg-0" action="/logout?_method=DELETE" method="POST"></form>
           <input type="submit" value="logout" >
@@ -52,29 +55,50 @@
       </nav>
       <div
   id="intro-example"
-  class="p-5 text-left bg-image"
+  class="p-0 text-left bg-image"
   style="background-image: url('https://cdn.pixabay.com/photo/2017/06/05/11/01/airport-2373727_1280.jpg');
   background-size: cover;
   
   "
 >
-    <h1>trips show</h1>
-    <ul>
-        <ul>
-            <li><%= trip.name %></li>
-            <li><%= trip.dateStart %></li>
-            <li><%= trip.dateEnd %></li>
-        </ul>
-        <li>
-          
-            <a href="/trip">Trips</a>
-            <a href="/trip/<%= trip._id %>/edit ">Edit Trip</a>
-        </li>
+<div style="
+ color: white;
+   background-color: rgba(0,0,0,0.7);
+    max-width: fit-content;
+    border-radius: 25%;
+    padding: 30px;
+    " 
+>
+<h1 style="text-align: center;"><%= trip.name %></h1>
+        <br>
+           <%= trip.dateStart %>
+        </br>  
+        <br>
+           <%= trip.dateEnd %>
+        </br>
+        <br>
+           <%= trip.activities %>
+        </br>
+        <br>
+           <%= trip.notes %>
+        </br>
+        <br>
+           <%= trip.location %>
+        </br>
+        <br>
+           <%= trip.budget %>
+        </br>
+        <br>
+           <%= trip.createdBy %>
+        </br>
+        <br>
+            <a class="btn btn-info" role="button" href="/trip/<%= trip._id %>/edit ">Edit Trip</a>
+        </br>
+        <br>
         <form action="/trip/<%= trip._id %>?_method=DELETE" method="POST">
-            <input type="submit" value="Delete" />
+            <input class="btn btn-danger" type="submit" value="Delete Trip" />
           </form>
-        
-      </ul> 
+        </br>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
