--- a/views/traveler/new.ejs
+++ b/views/traveler/new.ejs
@@ -62,10 +62,10 @@
         id="intro-example"
         class="p-5 text-center bg-image"
         style="background-image: url('https://cdn.pixabay.com/photo/2020/05/16/01/08/beach-5175610_960_720.jpg');
-        background-size: cover;
+        background-size: cover; min-height: 96vh;
         "
     >
-  <div class="mask" style="background-color: rgba(0,0,0,0.7)">
+  <div class="mask" style="background-color: rgba(0,0,0,0.7); max-width: fit-content;">
     <div class="d-flex justify-content-center align-items-center h-100">
       <div class="text-white">  
         <h1 class="mb-3">Please share some information with us.</h1>
