--- a/views/traveler/edit.ejs
+++ b/views/traveler/edit.ejs
@@ -60,7 +60,7 @@
     id="intro-example"
     class="p-5 text-center bg-image"
     style="background-image: url('https://cdn.pixabay.com/photo/2013/02/21/19/06/drink-84533_1280.jpg');
-    background-size: cover;
+    background-size: cover; min-height: 96vh;
     "
   >
   
