more styling in trips

--- a/views/trips/new.ejs
+++ b/views/trips/new.ejs
@@ -64,7 +64,11 @@
     "
   >
        
-        <div style="border-radius: 25%; color: white; padding: 30px; background-color: rgba(0,0,0,0.7); max-width: fit-content;">
+        <div style="border-radius: 10%;
+         color: white;
+         padding: 30px;
+         background-color: rgba(0,0,0,0.7); 
+         max-width: fit-content;">
           <h1>Create a new trip</h1>
             <form action="/trip" method="POST">
                 <p>
