adding stying to traveler pages

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -54,7 +54,7 @@
   <!-- Background image -->
     <div id="media-size" class="p-5 text-center bg-image"
     style="background: url('https://cdn.pixabay.com/photo/2015/10/30/20/13/sunrise-1014711_960_720.jpg') no-repeat center center fixed;
-    background-size: cover"
+    background-size: cover; min-height: 96vh;"
     >
     <div class="mask" style="background-color: rgba(0,0,0,0.7)">
       <div class="d-flex justify-content-center align-items-center h-100">
