--- a/views/traveler/edit.ejs
+++ b/views/traveler/edit.ejs
@@ -36,7 +36,7 @@
       <div class="collapse navbar-collapse" id="navbarExample01">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <a class="nav-link navbar-brand" style="color: rgba(22,153,247,1)" href="#">SpeakeasyTravel</a>
           </li>
           <li>
             <a class="nav-link" href="#">About</a>
@@ -103,6 +103,11 @@
             </div>
           </div>             
           <button type="submit" class="btn btn-outline-light btn-lg mb-3">Update</button>
+          <!-- NOTE come back to move this button over to the right -->
+          <form style="padding-left: 60px;" action="/traveler/<%= traveler._id %>?_method=DELETE" method=POST>
+              <input class="bg-warning text-dark" type="submit" value="Delete Account">
+          </form> 
+          </div>
         </form>
     </div>
     </div>
