--- a/views/traveler/index.ejs
+++ b/views/traveler/index.ejs
@@ -41,7 +41,7 @@
       <div class="collapse navbar-collapse" id="navbarExample01">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" aria-current="page" href="/">SpeakeasyTravel</a>
+            <a class="nav-link navbar-brand" style="color: blue" href="#">SpeakeasyTravel</a>
           </li>
           <li>
             <a class="nav-link" href="#">About</a>
@@ -69,6 +69,8 @@
                   <p> <%= traveler[0].bio %> </p>
           <p>My Home Base is 
           <%= traveler[0].address.city %> <%= traveler[0].address.state %>, <%= traveler[0].address.country %> </p>
+         
+         <!-- NOTE take away dropdown and place links at bottome of the grey area -->
           <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdown" data-bs-toggle="dropdown" aria-expanded="false">Options</button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -79,12 +81,6 @@
                 <a href="/trip">Add a new trip!</a>
               </li>
             </ul>
-          </div>
-
-          <div class="position-absolute bottom-0 end-0">
-            <form action="/traveler/<%= traveler[0]._id %>?_method=DELETE" method=POST>
-              <input class="bg-warning text-dark" type="submit" value="Delete Account">
-          </form> 
           </div>
   </div>
       
