--- a/views/trips/index.ejs
+++ b/views/trips/index.ejs
@@ -36,7 +36,7 @@
       <div class="collapse navbar-collapse" id="navbarExample01">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <a class="nav-link navbar-brand" style="color: rgba(22,153,247,1)" href="#">SpeakeasyTravel</a>
           </li>
           <li>
             <a class="nav-link" href="#">About</a>
