--- a/views/trips/edit.ejs
+++ b/views/trips/edit.ejs
@@ -33,10 +33,10 @@
       >
         <i class="fas fa-bars"></i>
       </button>
-      <div class="collapse navbar-collapse" id="navbarExample01">
+      <form class="collapse navbar-collapse" id="navbarExample01">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <a class="nav-link navbar-brand" style="color: rgba(22,153,247,1)" href="#">SpeakeasyTravel</a>
           </li>
           <li>
             <a class="nav-link" href="#">About</a>
@@ -48,8 +48,9 @@
             <a class="nav-link" href="/trip">Trips</a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0" action="/logout?_method=DELETE" method="POST"></form>
+        <form class="form-inline my-2 my-lg-0" action="/logout?_method=DELETE" method="POST">
           <input type="submit" value="logout" >
+        </form>
       </div>
       
     </div>
