--- a/views/trips/new.ejs
+++ b/views/trips/new.ejs
@@ -37,7 +37,7 @@
       <div class="collapse navbar-collapse" id="navbarExample01">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <a class="nav-link navbar-brand" style="color: rgba(22,153,247,1)" href="#">SpeakeasyTravel</a>
           </li>
           <li>
             <a class="nav-link" href="#">About</a>
@@ -49,8 +49,9 @@
             <a class="nav-link" href="/trip">Trips</a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0" action="/logout?_method=DELETE" method="POST"></form>
+        <form class="form-inline my-2 my-lg-0" action="/logout?_method=DELETE" method="POST">
           <input type="submit" value="logout" >
+        </form>
       </div>
     </div>
   </nav>
@@ -70,7 +71,9 @@
          background-color: rgba(0,0,0,0.7); 
          max-width: fit-content;">
           <h1>Create a new trip</h1>
-            <form action="/trip" method="POST">
+            
+          <!-- update form to look like others and pull in all trip model keys -->
+          <form action="/trip" method="POST">
                 <p>
                     <input type="text" name="name" placeholder="Place" />
                 </p>
