--- a/views/trips/show.ejs
+++ b/views/trips/show.ejs
@@ -36,7 +36,7 @@
           <div class="collapse navbar-collapse" id="navbarExample01">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item active">
-                <a class="nav-link" aria-current="page" href="/">Home</a>
+                <a class="nav-link navbar-brand" style="color: rgba(22,153,247,1)" href="#">SpeakeasyTravel</a>
               </li>
               <li>
                 <a class="nav-link" href="#">About</a>
@@ -48,8 +48,9 @@
                 <a class="nav-link" href="/trip">Trips</a>
               </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0" action="/logout?_method=DELETE" method="POST"></form>
-          <input type="submit" value="logout" >
+            <form class="form-inline my-2 my-lg-0" action="/logout?_method=DELETE" method="POST">
+              <input type="submit" value="logout" >
+            </form>
           </div>
         </div>
       </nav>
@@ -88,9 +89,7 @@
         <br>
            <%= trip.budget %>
         </br>
-        <br>
-           <%= trip.createdBy %>
-        </br>
+        
         <br>
             <a class="btn btn-info" role="button" href="/trip/<%= trip._id %>/edit ">Edit Trip</a>
         </br>
