edits to styling in multiple templates

--- a/views/traveler/edit.ejs
+++ b/views/traveler/edit.ejs
@@ -20,6 +20,8 @@
           }
         }
       </style>
+
+  <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <div class="container-fluid">
       <button
@@ -45,7 +47,7 @@
             <a class="nav-link" href="/traveler">Traveler</a>
           </li>
           <li>
-            <a class="nav-link" href="/trips">Trips</a>
+            <a class="nav-link" href="/trip">Trips</a>
           </li>
         </ul>
             <form action="/logout?_method=DELETE" method="POST">
