--- a/views/traveler/index.ejs
+++ b/views/traveler/index.ejs
@@ -64,8 +64,8 @@
   style="background-image: url('https://cdn.pixabay.com/photo/2017/10/23/05/56/holiday-2880261_1280.jpg');
   background-size: cover; min-height: 96vh"
 >
-        <div style="margin-left: 5px; color: white; padding: 5px; background-color: rgba(0,0,0,0.7); max-width: fit-content; border-radius: 10%; padding: 30px; min-height: 50vh;">  
-        <h1>Welcome <%= traveler[0].name %> </h1>  
+        <div style="margin-left: 5px; color: white; padding: 5px; background-color: rgba(0,0,0,0.7); max-width: 40vw; border-radius: 10%; padding: 30px; min-height: 50vh;">  
+        <h1>Hi!  I'm <%= traveler[0].name %> </h1>  
                   <p> <%= traveler[0].bio %> </p>
           <p>My Home Base is 
           <%= traveler[0].address.city %> <%= traveler[0].address.state %>, <%= traveler[0].address.country %> </p>
@@ -80,10 +80,12 @@
               <li>
                 <a href="/trip">Add a new trip!</a>
               </li>
+              <li>
+                <form style="padding-left: 60px;" action="/traveler/<%= traveler[0]._id %>?_method=DELETE" method="POST">
+                  <input class="bg-warning text-dark" type="submit" value="Delete Account">
+                </form>
+              </li>
             </ul>
-            <!-- NOTE come back to move this button over to the right -->
-          <form style="padding-left: 60px;" action="/traveler/<%= traveler[0]._id %>?_method=DELETE" method="POST">
-            <input class="bg-warning text-dark" type="submit" value="Delete Account">
         </form>
           </div>
   </div>
