--- a/views/trips/edit.ejs
+++ b/views/trips/edit.ejs
@@ -20,6 +20,8 @@
       }
     }
   </style>
+
+  <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <div class="container-fluid">
       <button
@@ -55,50 +57,71 @@
       
     </div>
   </nav>
+
+  <!-- background image -->
   <div
   id="intro-example"
-  class="p-0 text-left bg-image"
+  class="p-5 text-center bg-image"
   style="background-image: url('https://cdn.pixabay.com/photo/2015/07/11/23/02/plane-841441_960_720.jpg');
   background-size: cover;
-  min-height: 92vh;
+  min-height: 92vh; "
+>
 
-  
-  "
->
-<div
-style="
- color: white;
-   background-color: rgba(0,0,0,0.7);
-    max-width: fit-content;
-    border-radius: 10%;
-    padding: 40px;
-    " 
->
-    <h1 style="text-align: center;
-    padding-bottom: 10px;">Edit your trip</h1>
-    <div>
+<div class="mask" style=" background-color: rgba(0,0,0,0.7);" >
+  <div class="d-flex justify-content-center align-items-center h-100">
+    <div class="text-white">
+      <h1 class="mb-3">Need to make some changes?</h1>
+      <h2 class="mb-3">Update your trip information below.</h2>
+      <div>
       <form action="/trip/<%= trip._id %>?_method=PUT" method="POST">
-        <p></p>
-          <input type="text" name="name" placeholder="trip name" value = "<%= trip.name %> ">
-        </p>
-        <p>
-          <input type="text" name="dateStart" placeholder="start" value= "<%= trip.dateStart %> ">
-        </p>
-        <p>
-          <input type="text" name="dateEnd" placeholder="end" value = "<%= trip.dateEnd %> ">
-        </p>
-        <p>
-          <input type="text" name="activities" placeholder="activities" value= "<%= trip.activities %> ">
-        </p>
-        <p>
-          <input type="text" name="notes" placeholder="notes" value = "<%= trip.notes %> ">
-        </p>
-        <p>
-          <input type="text" name="location" placeholder="location"value= "<%= trip.location %> ">
-        </p>
-        <p>
-          <input type="text" name="budget" placeholder="budget"value = "<%= trip.budget %> ">
-        </p>
+        <div class="mb-3 row">
+          <label for="name" class="col-sm-3 col-form-label">Trip Name</label>
+          <div class="col-sm">
+            <input type="text" class="form-control" name="name" id="name" value = "<%= trip.name %>" required>
+          </div>  
+        </div>
+        <div class="mb-3 row">
+          <label for="dateStart" class="col-sm-3 col-form-label">Start Date</label>
+          <div class="col-sm">
+            <input type="date" class="form-control" name="dateStart" id="dateStart" value= "<%= trip.dateStart %> ">
+          </div>  
+        </div>
+        <div class="mb-3 row">
+          <label for="dateEnd" class="col-sm-3 col-form-label">End Date</label>
+          <div class="col-sm">
+            <input type="date" class="form-control" name="dateEnd" id="dateEnd" value = "<%= trip.dateEnd %> ">
+          </div>  
+        </div>
+        <div class="mb-3 row">
+          <label for="body" class="col-sm-4 col-form-label">Trip Description</label>
+          <div class="col-sm">
+            <input type="text" class="form-control" name="body" id="body" placeholder="Description">
+          </div>  
+        </div>
+        <div class="mb-3 row">
+          <label for="activities" class="col-sm-3 col-form-label">Activities</label>
+          <div class="col-sm">
+            <input type="text" class="form-control" name="activities" id="activities" value= "<%= trip.activities %> ">
+          </div>  
+        </div>
+        <div class="mb-3 row">
+          <label for="notes" class="col-sm-3 col-form-label">Notes</label>
+          <div class="col-sm">
+            <input type="text" class="form-control" name="notes" id="notes" value = "<%= trip.notes %> ">
+          </div>  
+        </div>
+        <div class="mb-3 row">
+          <label for="location" class="col-sm-3 col-form-label">Location</label>
+          <div class="col-sm">
+            <input type="text" class="form-control" name="location" id="location" value= "<%= trip.location %> ">
+          </div>  
+        </div>
+        <div class="mb-3 row">
+          <label for="budget" class="col-sm-3 col-form-label">Budget $</label>
+          <div class="col-sm">
+            <input type="number" class="form-control" name="budget" id="budget" value = "<%= trip.budget %> ">
+          </div>  
+        </div> 
     </div>
     <p>  
       <input class="btn btn-info" type="submit" value="Update">
@@ -110,6 +133,9 @@ style="
       </form>
     </form>
 </div>
+</div>
+</div>
+
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
