--- a/views/trips/new.ejs
+++ b/views/trips/new.ejs
@@ -20,7 +20,8 @@
           }
         }
       </style>
-    
+
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <div class="container-fluid">
       <button
@@ -55,39 +56,76 @@
       </div>
     </div>
   </nav>
+
+  <!-- background img -->
   <div
     id="intro-example"
-    class="p-0 text-left bg-image"
+    class="p-5 text-center bg-image"
     style="background-image: url('https://cdn.pixabay.com/photo/2016/02/19/11/36/canal-1209808_1280.jpg');
     background-size: cover;
-    min-height: 93.3vh;
-    
-    "
+    min-height: 93.3vh;"
   >
-       
-        <div style="border-radius: 10%;
-         color: white;
-         padding: 30px;
-         background-color: rgba(0,0,0,0.7); 
-         max-width: fit-content;">
-          <h1>Create a new trip</h1>
-            
-          <!-- update form to look like others and pull in all trip model keys -->
-          <form action="/trip" method="POST">
-                <p>
-                    <input type="text" name="name" placeholder="Place" />
-                </p>
-                <p>
-                    <input type="date" name="dateStart" placeholder="July 1, 2020" />
-                </p>
-                <p>
-                    <input type="date" name="dateEnd" placeholder="July 2, 2020"></input>
-                </p>
-                <p>
-                    <input href="/trip/edit" class="btn btn-info" type="submit" value="Submit">
-                </p>
-            </form>
+    <div class="mask" style="background-color: rgba(0,0,0,0.7);">
+      <div class="d-flex justify-content-center align-items-center h-100">
+        <div class="text-white">
+      <h1 class="mb-3" style="min-width: 50vw;">Create a new trip</h1>
+        
+      <form action="/trip" method="POST">
+        <div class="mb-3 row">
+          <label for="name" class="col-sm-3 col-form-label">Trip Name</label>
+          <div class="col-sm">
+            <input type="text" class="form-control" name="name" id="name" placeholder="Trip name" required>
+          </div>  
         </div>
+        <div class="mb-3 row">
+          <label for="dateStart" class="col-sm-3 col-form-label">Start Date</label>
+          <div class="col-sm">
+            <input type="date" class="form-control" name="dateStart" id="dateStart" placeholder="Now">
+          </div>  
+        </div>
+        <div class="mb-3 row">
+          <label for="dateEnd" class="col-sm-3 col-form-label">End Date</label>
+          <div class="col-sm">
+            <input type="date" class="form-control" name="dateEnd" id="dateEnd" placeholder="Later">
+          </div>  
+        </div>
+        <div class="mb-3 row">
+          <label for="body" class="col-sm-4 col-form-label">Trip Description</label>
+          <div class="col-sm">
+            <input type="text" class="form-control" name="body" id="body" placeholder="Description">
+          </div>  
+        </div>
+        <div class="mb-3 row">
+          <label for="activities" class="col-sm-3 col-form-label">Activities</label>
+          <div class="col-sm">
+            <input type="text" class="form-control" name="activities" id="activities" placeholder="Having fun">
+          </div>  
+        </div>
+        <div class="mb-3 row">
+          <label for="notes" class="col-sm-3 col-form-label">Notes</label>
+          <div class="col-sm">
+            <input type="text" class="form-control" name="notes" id="notes" placeholder="notes">
+          </div>  
+        </div>
+        <div class="mb-3 row">
+          <label for="location" class="col-sm-3 col-form-label">Location</label>
+          <div class="col-sm">
+            <input type="text" class="form-control" name="location" id="location" placeholder="Where's waldo">
+          </div>  
+        </div>
+        <div class="mb-3 row">
+          <label for="budget" class="col-sm-3 col-form-label">Budget $</label>
+          <div class="col-sm">
+            <input type="number" class="form-control" name="budget" id="budget" placeholder="50.00">
+          </div>  
+        </div>                
+            <p>
+                <input href="/trip/edit" class="btn btn-info" type="submit" value="Submit">
+            </p>
+        </form>
+    </div>
+  </div>
+</div>
     
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
