trying to display date in trip edit

--- a/views/trips/edit.ejs
+++ b/views/trips/edit.ejs
@@ -83,7 +83,7 @@
         <div class="mb-3 row">
           <label for="dateStart" class="col-sm-3 col-form-label">Start Date</label>
           <div class="col-sm">
-            <input type="date" class="form-control" name="dateStart" id="dateStart" value= "<%= trip.dateStart %> ">
+            <input type="date" class="form-control" name="dateStart" id="dateStart" value= "<%= trip.dateStart %>">
           </div>  
         </div>
         <div class="mb-3 row">
@@ -119,7 +119,7 @@
         <div class="mb-3 row">
           <label for="budget" class="col-sm-3 col-form-label">Budget $</label>
           <div class="col-sm">
-            <input type="number" class="form-control" name="budget" id="budget" value = "<%= trip.budget %> ">
+            <input type="number" class="form-control" name="budget" id="budget" value = <%= trip.budget %> >
           </div>  
         </div> 
     </div>
