made dates work on the value in the input for the trip edit ejs

--- a/views/trips/edit.ejs
+++ b/views/trips/edit.ejs
@@ -83,13 +83,13 @@
         <div class="mb-3 row">
           <label for="dateStart" class="col-sm-3 col-form-label">Start Date</label>
           <div class="col-sm">
-            <input type="date" class="form-control" name="dateStart" id="dateStart" value= "<%= trip.dateStart %>">
+            <input type="date" class="form-control" name="dateStart" id="dateStart" value= "<%= dateStart %>">
           </div>  
         </div>
         <div class="mb-3 row">
           <label for="dateEnd" class="col-sm-3 col-form-label">End Date</label>
           <div class="col-sm">
-            <input type="date" class="form-control" name="dateEnd" id="dateEnd" value = "<%= trip.dateEnd %> ">
+            <input type="date" class="form-control" name="dateEnd" id="dateEnd" value= "<%= dateEnd %>">
           </div>  
         </div>
         <div class="mb-3 row">
