changing styling on the traveler index edit and new templates

--- a/views/traveler/new.ejs
+++ b/views/traveler/new.ejs
@@ -65,7 +65,7 @@
         background-size: cover; min-height: 96vh;
         "
     >
-  <div class="mask" style="background-color: rgba(0,0,0,0.7)">
+  <div class="mask" style="background-color: rgba(0,0,0,0.7); border-radius: 30px;">
     <div class="d-flex justify-content-center align-items-center h-100">
       <div class="text-white">  
         <h1 class="mb-3">Please share some information with us.</h1>
