--- a/views/traveler/edit.ejs
+++ b/views/traveler/edit.ejs
@@ -66,7 +66,7 @@
     "
   >
   
-  <div class="mask" style="background-color: rgba(0,0,0,0.7)">
+  <div class="mask" style="background-color: rgba(0,0,0,0.7); border-radius: 30px;">
     <div class="d-flex justify-content-center align-items-center h-100">
       <div class="text-white">  
         <h1 class="mb-3">Need to make some changes?</h1>
